# rhails-specification

./: README.md
rhails/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  lightspeed-stack.yaml  pyproject.toml  pytest.ini
rhails/.specify/memory/: constitution.md
rhails/alembic/: env.py
rhails/alembic/versions/: 20260115_0001_create_conversation_sessions.py  20260115_0002_create_messages.py  20260115_0003_create_user_intents.py  20260115_0004_create_operation_requests.py  20260115_0005_create_execution_results.py  20260115_0006_create_audit_logs.py
rhails/helm/openshift-ai-agent/: Chart.yaml  values.yaml
rhails/helm/openshift-ai-agent/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  route.yaml  service.yaml  serviceaccount.yaml
rhails/src/: __init__.py
rhails/src/agent/: __init__.py
rhails/src/agent/auth/: oauth_validator.py  rbac_checker.py
rhails/src/agent/conversation/: __init__.py  llm_client.py  session_manager.py
rhails/src/agent/operations/: __init__.py  model_operations.py  monitoring_operations.py  notebook_operations.py  pipeline_operations.py  project_operations.py
rhails/src/api/: main.py
rhails/src/api/middleware/: auth.py  error_handler.py  logging.py  rate_limiter.py
rhails/src/api/routes/: confirm.py  health.py  query.py  sessions.py
rhails/src/models/: __init__.py  base.py  conversation.py  intent.py  openshift.py
rhails/src/services/: __init__.py  audit_logger.py  database.py  error_translator.py  intent_parser.py  openshift_client.py
rhails/tests/: __init__.py  conftest.py
rhails/tests/contract/: test_conversation_contract.py
rhails/tests/integration/: __init__.py  test_load_security.py  test_model_operations.py  test_monitoring_operations.py  test_notebook_operations.py  test_performance.py  test_pipeline_operations.py  test_project_operations.py  test_quickstart_scenarios.py
rhails/tests/unit/: test_audit_logger.py  test_conversation_manager.py  test_error_translator.py  test_intent_parser.py  test_operation_executor.py
specs/001-openshift-ai-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-openshift-ai-agent/checklists/: requirements.md
specs/001-openshift-ai-agent/contracts/: conversation-api.yaml  openshift-ai-operations.yaml
specs/001-openshift-ai-agent/research/: openshift-ai-api-research.md
